--- a/manifests/service.yml
+++ b/manifests/service.yml
@@ -5,7 +5,7 @@ metadata:
   namespace: hiperdev
 spec:
   selector:
-    app: hiperdev-api
+    app: hiperdev-newrelic-usecase
   ports:
   - port: 80
     targetPort: 80
